syntax = "proto3";

package homework.orders.v1;
option go_package = "homework/orders/v1;homework_orders_v1";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service Orders {
    rpc AcceptFromCourier(AcceptFromCourierRequest) returns (AcceptFromCourierResponse) {}
    rpc Remove(RemoveRequest) returns (RemoveResponse) {}
    rpc Give(GiveRequest) returns (GiveResponse) {}
    rpc List(ListRequest) returns (ListResponse) {}
    rpc Return(ReturnRequest) returns (ReturnResponse) {}
    rpc ListReturn(ListReturnRequest) returns (OrderList) {}
}

message AcceptFromCourierRequest {
    int64 id = 1;
    int64 recipient_id = 2;
    int64 weight_grams = 3;
    int64 price_kopecks = 4;
    string cover = 5;
    string expire_date = 6;
}

message AcceptFromCourierResponse {
}

message RemoveRequest {
    int64 id = 1;
}

message RemoveResponse {
}

message GiveRequest {
    repeated int64 ids = 1;
}

message GiveResponse {
    repeated int64 ids = 1;
}

message ListRequest {
    int64 recipient = 1;
    int64 n = 2;
    bool only_not_given_orders = 3;
}

message ListResponse {
    OrderList orders = 1;
}

message ReturnRequest {
    int64 id = 1;
    int64 recipient = 2;
}

message ReturnResponse {
}

message ListReturnRequest {
    int64 page_num = 1;
    int64 orders_per_page = 2;
}

message ListReturnResponse {
    OrderList orders = 1;
}

message OrderList {
    repeated Order orders = 1;
}

message Order {
    int64 id = 1;
    int64 recipient_id = 2;
    int64 weight_grams = 3;
    int64 price_kopecks = 4;
    string cover = 5;
    google.protobuf.Timestamp expire_date = 6;
}